--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "@babel/preset-env": "^7.22.4",
     "@babel/register": "^7.21.0",
     "@cucumber/cucumber": "^9.1.2",
-    "@wdio/appium-service": "^8.10.7",
+    "@wdio/appium-service": "^8.11.2",
     "@wdio/cli": "^8.10.7",
     "@wdio/cucumber-framework": "^8.10.7",
     "@wdio/local-runner": "^8.10.7",
     "@wdio/spec-reporter": "^8.10.6",
-    "appium": "^1.22.3"
+    "appium": "1.19.1"
   },
   "scripts": {
     "wdio": "wdio run ./wdio.conf.js"
